Rigid Body Constraint in duplicated collection is not added to RigidBodyConstraints collection #66944

Closed
opened 2019-07-15 00:53:22 +02:00 by Phil · 3 comments

System Information
Operating system: Linux Mint 19.1 XFCE
Graphics card: Nvidia GTX 970 4G

Blender Version
blender-2.80rc1-linux-glibc217-x86_64

Duplicating a collection containing rigid bodies connected by a Rigid Body Constraint duplicates the rigid body constraint, but does not add the duplicated constraint to the RigidBodyConstraints collection, so the duplicated constraint has no effect on the duplicated rigid bodies.

Create an object and add it as an active rigid body at location (0, 0, 0).
Create another object and add it as a passive rigid body at location (0, 0, 2).
Select both the active rigid body and the passive rigid body in that order, and connect them with a rigid body constraint ('Fixed' type by default).
Select both rigid bodies and the constraint, and move them into a new collection.
Run the animation - the active rigid body remains in position correctly.
Duplicate the collection containing the rigid bodies and the constraint.
Select all of the contents of the duplicated collection, and move them to another location away from the original objects and constraint.
Run the animation - the original rigid bodies remain in position, but the active rigid body in the duplicated collection falls. The 3D View shows the connection line between the duplicated rigid bodies as the active rigid body falls.
The Outliner window in Data API mode reveals that 'Blendfile Data - Collections - RigidBodyConstraints - All Objects' contains only the original constraint. The duplicated constraint is not listed.
2019-07-15_08-21-15_rigidbodyconstraint_bug.blend

system-info.txt

System Information Operating system: Linux Mint 19.1 XFCE Graphics card: Nvidia GTX 970 4G Blender Version blender-2.80rc1-linux-glibc217-x86_64 Duplicating a collection containing rigid bodies connected by a Rigid Body Constraint duplicates the rigid body constraint, but does not add the duplicated constraint to the RigidBodyConstraints collection, so the duplicated constraint has no effect on the duplicated rigid bodies. Create an object and add it as an active rigid body at location (0, 0, 0). Create another object and add it as a passive rigid body at location (0, 0, 2). Select both the active rigid body and the passive rigid body in that order, and connect them with a rigid body constraint ('Fixed' type by default). Select both rigid bodies and the constraint, and move them into a new collection. Run the animation - the active rigid body remains in position correctly. Duplicate the collection containing the rigid bodies and the constraint. Select all of the contents of the duplicated collection, and move them to another location away from the original objects and constraint. Run the animation - the original rigid bodies remain in position, but the active rigid body in the duplicated collection falls. The 3D View shows the connection line between the duplicated rigid bodies as the active rigid body falls. The Outliner window in Data API mode reveals that 'Blendfile Data - Collections - RigidBodyConstraints - All Objects' contains only the original constraint. The duplicated constraint is not listed. [2019-07-15_08-21-15_rigidbodyconstraint_bug.blend](https://archive.blender.org/developer/F7609227/2019-07-15_08-21-15_rigidbodyconstraint_bug.blend) [system-info.txt](https://archive.blender.org/developer/F7609228/system-info.txt)
Author

Added subscriber: @Philstix

Added subscriber: @Philstix
Bastien Montagne was assigned by Sebastian Parborg 2019-07-16 12:15:58 +02:00

This issue was referenced by 105ae3be99

This issue was referenced by 105ae3be9993a646615499bf793cb14549e4104d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66944
No description provided.